--- a/catdes.Rmd
+++ b/catdes.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "catdes"
+title: "Description of a categorical or continuous variable with qualitative and quantitative data"
 output:
   html_document:
     toc: True
@@ -13,7 +13,7 @@ knitr::include_graphics("images/catdes1.png")
 <br><br />
 
 ## **The interface**
-As it can be seen in the figure above, the interface is very simple and only have 3 fields you need to worry about.
+As it can be seen in the figure above, the interface is very simple and only has 3 fields you need to worry about.
 <br><br />
 ```{r catdes2, out.width="60%", fig.align="left", echo=FALSE}
 knitr::include_graphics("images/catdes2.png")
@@ -23,7 +23,7 @@ Firstly, the __*Variable to Characterize*__ take either a continuous or categori
 
 ## **Examples**
 
-There two ways of using this methods. You can either use it to see what variables are significantly describing the variable to characterize or you can set the __*Significance threshold*__ to 100 so that you have the indicators (R², correlation, etc.) for all the variables.\
+There are two ways of using this methods. You can either use it to see what variables are significantly describing the variable to characterize or you can set the __*Significance threshold*__ to 100 so that you have the indicators (R², correlation, etc.) for all the variables.\
 For the following examples, we will be using the bugs data set (available with Jamovi):
 ```{r catdesbugs, out.width="80%", fig.align="left", echo=FALSE}
 knitr::include_graphics("images/catdesbugs.png")
@@ -40,7 +40,7 @@ knitr::include_graphics("images/catdesexres1.png")
 ```
 <br><br />
 
-We can see that for a threshold of 0.05, none of the categorical variable significantly describe the LDFL variable. However, the 3 continuous variables are significantly correlated (for a threshold of 0.05) to LDLF with correlations between 0.5 and 0.6.
+We can see that for a threshold of 0.05, none of the categorical variables significantly describes the LDFL variable. However, the 3 continuous variables are significantly correlated (for a threshold of 0.05) to LDLF with correlations between 0.5 and 0.6.
 <br><br />
 
 Now, let's set the __*Significance threshold*__ to 100 to get a complete description of the variable.
